# Cotacoes

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
BRMed/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/: serializers.py  swagger_params.py  tests.py  urls.py  views.py
api/fixtures/: test_api_data.json
quotes/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  utils.py  vat_comply.py  views.py
quotes/migrations/: 0001_initial.py
quotes/templates/quotes/: index.html
